# reverse-image-search-engine

./: .gitignore  README.md  pyproject.toml
eda/: similarity_search.py
training/: data_setup.sh  download.py  train.py
