[tool.poetry]
name = "reverse-image-search-engine"
version = "0.1.0"
description = ""
authors = ["Jason Adam <22adamj22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4.1"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
flake8 = "^3.8.4"
bandit = "^1.7.0"
mypy = "^0.800"
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^6.2.2"
matplotlib = "^3.3.4"
ipykernel = "^5.4.3"
gdown = "^3.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
